--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,6 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+//red ,green and blue value respectively for light green color
+$color-green:rgb(95,187,126);
+$color-white:#fff;
