--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,48 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.navbar-laravel{
+    background-color: #fff;
+    background-origin: 0 2px 4px rgba(0,0,0,0.04);
+}
+
+.counters {
+    margin-left: 30px;
+    margin-right: 50px;
+    font-size: 12px;
+    text-align: center;
+
+    strong{
+        display: block;
+        //font-size: 2em;
+    }
+
+     .answer{
+        width: 60;
+        height: 60;
+        border: 1px solid red;
+    }
+
+    .status{
+        &.unanswered{
+            border:none;
+        }
+        &.answered{
+            border:1px solid $color-green;
+            color:$color-green;
+
+        }
+        &.answered-accepted{
+            background:$color-green;
+
+        }
+    }
+
+    .view{
+        margin-top: 10px;
+    }
+    .vote{
+        margin-bottom: 10px;
+    }
+  }
